--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "angular": "^1.7.3",
     "angular-route": "^1.7.3",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "express": "^4.16.3",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "react": "^16.4.2"
   }
 }
